Fixed picture alignment

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -48,6 +48,7 @@ img{
 #value{
   height: 250px;
   width: 600px;
+  text-align: center;
 }
 
 #winners{
